...
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/place_visually_sprite_switch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/material_design_spacing_large"
             android:paddingBottom="@dimen/material_design_spacing_large"
             android:text="@string/new_sprite_dialog_place_visually" />

        <TextView
            android:id="@+id/place_visually_textView"
            android:text="@string/place_visually_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>

