...

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:weightSum="100">

        <TextView
            android:id="@+id/altitude_limit_ID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
...
        <TextView
            android:id="@+id/vertical_speed_limit_start_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginTop="10dp"
            android:text="200"
            android:textColor="@color/drone_holo_blue_bright"
            tools:ignore="HardcodedText" />

        <SeekBar
            android:id="@+id/vertical_speed_limit_seekbar"
            android:layout_width="0dp"
...
