...
    android:background="@drawable/brick_script"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/StartedBrick"
        style="@style/BrickText"
        android:text="@string/brick_when_started" >
    </TextView>

</LinearLayout>

