...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/dialog_formula_editor_data_name_edit_text"
            style="@style/DefaultDialog.EditText"
            android:hint="@string/formula_editor_data_dialog_hint" />

        <RadioGroup
            android:id="@+id/dialog_formula_editor_data_name_radio_group"
            style="@style/DefaultDialog.Item"
...
                android:layout_height="wrap_content"
                android:text="@string/formula_editor_dialog_for_this_sprite_only"
                android:textColor="@color/spritelist_details_text_color" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/dialog_formula_editor_data_is_list_checkbox"
            style="@style/DefaultDialog.Item"
            android:text="@string/formula_editor_data_dialog_is_list" />
    </LinearLayout>

</ScrollView>
