...
        android:layout_weight="1" >

        <Button
            android:id="@+id/formula_editor_keyboard_data"
            style="@style/FormulaEditorButton"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_data"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_string"
            style="@style/FormulaEditorButton"
            android:text="@string/formula_editor_string"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_ok"
            style="@style/FormulaEditorButton"
            android:text="@string/ok"
            android:layout_span="2" />
    </TableRow>
</TableLayout>

